crates/rsciter_macro/tests/compile_fail/ext_mod_test.rs
#[rsciter_macro::xmod]
mod ext;

fn main() {}